--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>User Authentication</title>
 </head>
 
 <body>
